--- a/src/apps/1688Admin/webapp/chuangye.pug
+++ b/src/apps/1688Admin/webapp/chuangye.pug
@@ -7,18 +7,10 @@ block css
 
 block content
     .container-fluid.row-space-common
-        .row.top-row
-            .col-xs-12.col-sm-12.col-md-6
-                .block-title.no-bottom.type2
-                    .block-title-head 
-                        |催费缴费
-                        .block-title-head-deco
-                .block-table-container.text-sm
-                    table#table_1
-                
-                        
+        .row
+            .col-xs-12
+                h2 创业首页
 
-    include ../components/footer/index
 
 block js
     script(src=JS_DIR + 'jquery.min.js')
