--- a/src/apps/1688Admin/webapp/index-estate.pug
+++ b/src/apps/1688Admin/webapp/index-estate.pug
@@ -73,6 +73,12 @@ block js
                             btn_props : "data-toggle='iframelinker' data-link='estate-rent-fee.html'"
                         },
                         {
+                            title : "收费类型管理",
+                            icon_class : "fa fa-money",
+                            selected : false,
+                            btn_props : "data-toggle='iframelinker' data-link='estate-rent-fee-type.html'"
+                        },
+                        {
                             title : "合同管理",
                             icon_class : "fa fa-clipboard",
                             selected : false,
