--- a/src/apps/1688Admin/webapp/merchant-info-examine.pug
+++ b/src/apps/1688Admin/webapp/merchant-info-examine.pug
@@ -67,7 +67,7 @@ block js
             
             //审核不通过弹窗的html内容
             var noPassHtml= "<div class='row-space-10'>" +
-                                "<div class='row no-bottom'>" +
+                                "<form class='row no-bottom'>" +
                                     "<div class='col-xs-12'>" +
                                         "<div class='form-group form-group-sm cool-form-group'>" +
                                             "<div class='control-label cool-form-label text-right'>审核人：</div>" +
@@ -80,7 +80,7 @@ block js
                                             "<textarea class='form-control textarea' rows=3 id='no_pass_reason'></textarea>" +
                                         "</div>" +
                                     "</div>" +
-                                "</div>" +
+                                "</form>" +
                             "</div>";
             
             
