--- a/src/apps/1688Admin/webapp/stylus/utils.styl
+++ b/src/apps/1688Admin/webapp/stylus/utils.styl
@@ -86,6 +86,8 @@
 .no-blr
     border-left none !important
     border-right none !important
+.no-border
+    border none !important
 
 //clearfix
 .with-clearfix:before
