--- a/src/apps/1688Admin/webapp/merchant-info.pug
+++ b/src/apps/1688Admin/webapp/merchant-info.pug
@@ -1,5 +1,12 @@
 extends layout
 
+block css
+    link(rel='stylesheet', href=CSS_DIR + 'font-awesome.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-table.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-datetimepicker.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'toastr.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'index.css')
+
 block content
     .container-fluid.row-space-common
         .row.mt-space
@@ -83,31 +90,6 @@ block js
             var $btn_edit = $('#toolbtn_edit');
             var $btn_examine = $('#toolbtn_examine');
             var $table = $('#merchant_info_table');
-            
-            //设置时间输入框
-            function setDateTimeInput() {
-                //发布起始日期
-                $startTime.datetimepicker({
-                    viewMode: 'days',
-                    format: 'YYYY-MM-DD',
-                    allowInputToggle: true
-                });
-                //发布截止日期
-                $endTime.datetimepicker({
-                    viewMode: 'days',
-                    format: 'YYYY-MM-DD',
-                    allowInputToggle: true,
-                    useCurrent: false //关联两个日期输入框是，需要设置截止日期的useCurrent:false
-                });
-                //关联起始和截止日期，使起始日期不晚于截止日期
-                $startTime.on("dp.change", function (e) {
-                    $endTime.data("DateTimePicker").minDate(e.date);
-                });
-                //关联起始和截止日期，使截止日期不早于起始日期
-                $endTime.on("dp.change", function (e) {
-                    $startTime.data("DateTimePicker").maxDate(e.date);
-                });
-            }
             
             //设置bootstrap-table插件
             function setBSTable() {
@@ -372,8 +354,7 @@ block js
             }
             
             
-            
-            setDateTimeInput();
+            window.commonTools.setDateTimeInputSection($startTime, $endTime);
             setBSTable();
             
         });
