--- a/src/apps/1688Admin/webapp/merchant-orginfo-new.pug
+++ b/src/apps/1688Admin/webapp/merchant-orginfo-new.pug
@@ -5,6 +5,7 @@ block css
     link(rel='stylesheet', href=CSS_DIR + 'bootstrap-datetimepicker.min.css')
     link(rel='stylesheet', href=CSS_DIR + 'bootstrap-table.min.css')
     link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/fileinput.min.css')
+    link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/theme.min.css')
     link(rel='stylesheet', href=CSS_DIR + 'toastr.min.css')
     link(rel='stylesheet', href=CSS_DIR + 'index.css')
 
@@ -125,6 +126,7 @@ block js
     script(src=JS_DIR + 'bootstrap-table/bootstrap-table-zh-CN.min.js')
     script(src=JS_DIR + 'bootstrap-fileinput/fileinput.min.js')
     script(src=JS_DIR + 'bootstrap-fileinput/zh.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/theme.min.js')
     script(src=JS_DIR + 'toastr.min.js')
     script(src=JS_DIR + 'BSModal.js')
     script(src=JS_DIR + 'common.js')
@@ -135,32 +137,11 @@ block js
             var $startTime = $('#start_time');
             var $endTime = $('#end_time');
             
-            //起始日期
-            $startTime.datetimepicker({
-                viewMode: 'days',
-                format: 'YYYY-MM-DD',
-                allowInputToggle: true
-            });
-            //截止日期
-            $endTime.datetimepicker({
-                viewMode: 'days',
-                format: 'YYYY-MM-DD',
-                allowInputToggle: true,
-                useCurrent: false //关联两个日期输入框是，需要设置截止日期的useCurrent:false
-            });
-            //关联起始和截止日期，使起始日期不晚于截止日期
-            $startTime.on("dp.change", function (e) {
-                $endTime.data("DateTimePicker").minDate(e.date);
-            });
-            //关联起始和截止日期，使截止日期不早于起始日期
-            $endTime.on("dp.change", function (e) {
-                $startTime.data("DateTimePicker").maxDate(e.date);
-            });
+            //初始化datetimepicker
+            window.commonTools.setDateTimeInputSection($startTime, $endTime);
             
-            //初始化fileinput插件
-            $('#org_license').fileinput({
-                language : 'zh'
-            });
+            //初始化fileinput
+            window.commonTools.initBSFileInput($('#org_license'));
             
             $("#btn_submit").click(function(){
                 
