--- a/src/apps/1688Admin/webapp/stylus/file-input-overwrite.styl
+++ b/src/apps/1688Admin/webapp/stylus/file-input-overwrite.styl
@@ -1,3 +1,17 @@
 .file-preview
     border-radius 0
     background-color WHITE
+.kv-hidden
+    display none
+.btn-kv
+    display inline-block
+    text-align center
+    width 0.3rem
+    height 0.3rem
+    line-height 0.3rem
+    font-size 0.14rem
+    padding 0px !important
+    border-radius COMMON_BORDER_RADIUS !important
+    border 1px solid GRAY_E3
+    &:hover
+        background-color GRAY_E3 !important
